// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> should render correctly with custom props 1`] = `
<input
  class="StyledRadio-sc-1q7ubkv-0 kGcskO"
  type="radio"
/>
`;

exports[`<Radio /> should render correctly with default props 1`] = `
<input
  class="StyledRadio-sc-1q7ubkv-0 liLDQG"
  type="radio"
/>
`;
